# gentify

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  WEB_UI_RAG_IMPROVEMENTS.md  WEB_UI_STATUS.md  agent_cli.py  coder_agent_demo.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  healthcheck.py  project.txt  pyproject.toml  web_ui_runner.py  web_ui_validator.py
config/: fluentd.conf
docker/: README.md
src/code_dev_assistant/: __init__.py  code_analyzer.py  coder_agent.py  config.py  git_tools.py  llm_client.py  logger.py  rag_system.py  server.py  workflow_orchestrator.py
test_projects/sample_python_project/: README.md  main.py  requirements.txt  setup.py
test_projects/sample_python_project/config/: config.yaml  settings.json
test_projects/sample_python_project/data/: company_data.json  processing_log.txt  sales_data.csv  user_data.csv
test_projects/sample_python_project/src/: __init__.py
test_projects/sample_python_project/src/calculator/: __init__.py  advanced_ops.py  basic_ops.py
test_projects/sample_python_project/src/data_processing/: __init__.py  data_analyzer.py  (+1 more)
test_projects/sample_python_project/tests/: __init__.py  test_calculator.py  test_data_processing.py  test_web_scraper.py
tests/: RAG_TEST_SUMMARY.md  README.md  comprehensive_rag_test.py  debug_rag_search.py  test_rag_semantic_search.py  test_simplified_logging.py
web_ui/: README.md  app.py
web_ui/templates/: base.html  chat.html  git.html  index.html  index_new.html  index_old.html  llm.html  rag.html  settings.html
(+5 files in other folders)
